[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Fonts/AppleTea-z8R1a.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/cursor.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/SettingsMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeB.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Menus/AltInputs.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeC.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "transit_in"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "transit_to_main"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/MainMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "transit_to_replays"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Scenes/Menus/ReplaysMenu.tscn" ],
"method": "change_scene"
} ]
}

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "default"
length = 1.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8, 1.6 )
}

[sub_resource type="DynamicFont" id=19]
size = 28
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="AltInputs" parent="." instance=ExtResource( 8 )]

[node name="Transition" type="AnimationPlayer" parent="."]
autoplay = "transit_in"
anims/RESET = SubResource( 3 )
anims/transit_in = SubResource( 4 )
anims/transit_to_main = SubResource( 5 )
anims/transit_to_replays = SubResource( 20 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.8, 0.8, 0.8, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Header" type="Label" parent="Background"]
margin_left = 128.0
margin_top = 88.0
margin_right = 623.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_top = 192.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="Background"]
margin_left = 640.0
margin_top = 256.0
margin_right = 648.0
margin_bottom = 984.0
color = Color( 0.356863, 0.356863, 0.356863, 1 )

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( 152, 284 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 11 )
anims/default = SubResource( 12 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Cursor"]
autoplay = "default"
anims/RESET = SubResource( 13 )
anims/default = SubResource( 14 )

[node name="SettingsList" type="VBoxContainer" parent="."]
margin_left = 768.0
margin_top = 256.0
margin_right = 1472.0
margin_bottom = 954.0

[node name="Fullscreen" parent="SettingsList" instance=ExtResource( 9 )]
margin_right = 704.0
focus_neighbour_top = NodePath("../UIVolume")

[node name="WindowSize" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 60.0
margin_right = 704.0
margin_bottom = 116.0

[node name="Borderless" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 120.0
margin_right = 704.0
margin_bottom = 176.0

[node name="Blank2" type="Label" parent="SettingsList"]
margin_top = 180.0
margin_right = 704.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 19 )
text = " "

[node name="Vsync" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 213.0
margin_right = 704.0
margin_bottom = 269.0

[node name="FPSLock" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 273.0
margin_right = 704.0
margin_bottom = 329.0

[node name="FPSandPing" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 333.0
margin_right = 704.0
margin_bottom = 389.0

[node name="DamageNumbers" parent="SettingsList" instance=ExtResource( 9 )]
margin_top = 393.0
margin_right = 704.0
margin_bottom = 449.0

[node name="Blank" type="Label" parent="SettingsList"]
margin_top = 453.0
margin_right = 704.0
margin_bottom = 482.0
custom_fonts/font = SubResource( 19 )
text = " "

[node name="GameVolume" parent="SettingsList" instance=ExtResource( 4 )]
margin_top = 486.0
margin_right = 704.0
margin_bottom = 542.0

[node name="MusicVolume" parent="SettingsList" instance=ExtResource( 4 )]
margin_top = 546.0
margin_right = 704.0
margin_bottom = 602.0

[node name="UIVolume" parent="SettingsList" instance=ExtResource( 4 )]
margin_top = 606.0
margin_right = 704.0
margin_bottom = 662.0
focus_neighbour_bottom = NodePath("../Fullscreen")

[node name="SettingsList2" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 485.0
margin_bottom = 954.0

[node name="Change" parent="SettingsList2" instance=ExtResource( 6 )]
margin_right = 293.0
focus_neighbour_top = NodePath("../Discard")
text = "Change Settings"

[node name="Replays" parent="SettingsList2" instance=ExtResource( 6 )]
margin_top = 60.0
margin_right = 293.0
margin_bottom = 116.0
text = "Manage Replays"

[node name="Blank4" type="Label" parent="SettingsList2"]
margin_top = 120.0
margin_right = 293.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 19 )
text = " "

[node name="Save" parent="SettingsList2" instance=ExtResource( 6 )]
margin_top = 153.0
margin_right = 293.0
margin_bottom = 209.0
text = "Save and return"

[node name="Discard" parent="SettingsList2" instance=ExtResource( 6 )]
margin_top = 213.0
margin_right = 293.0
margin_bottom = 269.0
focus_neighbour_bottom = NodePath("../Change")
text = "Discard Changes"
